// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.rovna-ui-steps.rovna-ui-steps-label-vertical .rovna-ui-steps-item-icon {
  margin-inline-start: 0px;
}

.c1.rovna-ui-steps.rovna-ui-steps-label-vertical .rovna-ui-steps-item-tail {
  margin-inline-start: 16px;
}

.c1.rovna-ui-steps.rovna-ui-steps-label-vertical .rovna-ui-steps-item-content {
  width: auto;
  text-align: left;
}

.c1.rovna-ui-steps.rovna-ui-steps-vertical > .rovna-ui-steps-item > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after {
  width: 2px;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item-icon {
  font-weight: 600;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-wait .rovna-ui-steps-item-icon {
  background-color: transparent;
  border-color: #DDDEE1FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-wait .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item-wait .rovna-ui-steps-item-description,
.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-description {
  color: #646A74FF !important;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-icon {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #686E78FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-description {
  color: #C03C54FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon {
  background-color: #C03C54FF;
  border-color: #C03C54FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #FFFFFFFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active):not(.rovna-ui-steps-item-error):not(.rovna-ui-steps-item-process):not(.rovna-ui-steps-item-wait) > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon {
  border-color: #3D825AFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active):not(.rovna-ui-steps-item-error):not(.rovna-ui-steps-item-process):not(.rovna-ui-steps-item-wait) > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #FFFFFFFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active):not(.rovna-ui-steps-item-error):not(.rovna-ui-steps-item-finish) > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon {
  background-color: #F4F6FBFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-process > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after,
.c1.rovna-ui-steps .rovna-ui-steps-item-wait > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after {
  background: linear-gradient( to right, #DDDEE1FF 4px, transparent 4px );
  background-size: 8px 1px;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-finish > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after {
  background-color: #3D825AFF;
  height: 2px;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-finish .rovna-ui-steps-item-icon {
  background-color: #3D825AFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-finish .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #FFFFFFFF;
}

<div
  className="c0"
>
  <div
    className="rovna-ui-steps rovna-ui-steps-horizontal c1 css-dev-only-do-not-override-u64svk rovna-ui-steps-label-vertical"
    data-testid="rovna-ui-steps"
    style={{}}
  >
    <div
      className="rovna-ui-steps-item rovna-ui-steps-item-process rovna-ui-steps-item-active"
      style={{}}
    >
      <div
        className="rovna-ui-steps-item-container"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="rovna-ui-steps-item-tail"
        />
        <div
          className="rovna-ui-steps-item-icon"
        >
          <span
            className="rovna-ui-steps-icon"
          >
            1
          </span>
        </div>
        <div
          className="rovna-ui-steps-item-content"
        >
          <div
            className="rovna-ui-steps-item-title"
          >
            Заголовок 1
          </div>
          <div
            className="rovna-ui-steps-item-description"
          >
            Описание 1
          </div>
        </div>
      </div>
    </div>
    <div
      className="rovna-ui-steps-item rovna-ui-steps-item-wait"
      style={{}}
    >
      <div
        className="rovna-ui-steps-item-container"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="rovna-ui-steps-item-tail"
        />
        <div
          className="rovna-ui-steps-item-icon"
        >
          <span
            className="rovna-ui-steps-icon"
          >
            2
          </span>
        </div>
        <div
          className="rovna-ui-steps-item-content"
        >
          <div
            className="rovna-ui-steps-item-title"
          >
            Заголовок 2
          </div>
          <div
            className="rovna-ui-steps-item-description"
          >
            Описание 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="rovna-ui-steps-item rovna-ui-steps-item-wait"
      style={{}}
    >
      <div
        className="rovna-ui-steps-item-container"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="rovna-ui-steps-item-tail"
        />
        <div
          className="rovna-ui-steps-item-icon"
        >
          <span
            className="rovna-ui-steps-icon"
          >
            3
          </span>
        </div>
        <div
          className="rovna-ui-steps-item-content"
        >
          <div
            className="rovna-ui-steps-item-title"
          >
            Заголовок 3
          </div>
          <div
            className="rovna-ui-steps-item-description"
          >
            Описание 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps vertical renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.rovna-ui-steps.rovna-ui-steps-label-vertical .rovna-ui-steps-item-icon {
  margin-inline-start: 0px;
}

.c1.rovna-ui-steps.rovna-ui-steps-label-vertical .rovna-ui-steps-item-tail {
  margin-inline-start: 16px;
}

.c1.rovna-ui-steps.rovna-ui-steps-label-vertical .rovna-ui-steps-item-content {
  width: auto;
  text-align: left;
}

.c1.rovna-ui-steps.rovna-ui-steps-vertical > .rovna-ui-steps-item > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after {
  width: 2px;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item-icon {
  font-weight: 600;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-wait .rovna-ui-steps-item-icon {
  background-color: transparent;
  border-color: #DDDEE1FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-wait .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item-wait .rovna-ui-steps-item-description,
.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-description {
  color: #646A74FF !important;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-icon {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-disabled .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #686E78FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-title,
.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-description {
  color: #C03C54FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon {
  background-color: #C03C54FF;
  border-color: #C03C54FF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active).rovna-ui-steps-item-error > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #FFFFFFFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active):not(.rovna-ui-steps-item-error):not(.rovna-ui-steps-item-process):not(.rovna-ui-steps-item-wait) > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon {
  border-color: #3D825AFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active):not(.rovna-ui-steps-item-error):not(.rovna-ui-steps-item-process):not(.rovna-ui-steps-item-wait) > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #FFFFFFFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item:not(.rovna-ui-steps-item-active):not(.rovna-ui-steps-item-error):not(.rovna-ui-steps-item-finish) > .rovna-ui-steps-item-container[role='button']:hover .rovna-ui-steps-item-icon {
  background-color: #F4F6FBFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-process > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after,
.c1.rovna-ui-steps .rovna-ui-steps-item-wait > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after {
  background: linear-gradient( to right, #DDDEE1FF 4px, transparent 4px );
  background-size: 8px 1px;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-finish > .rovna-ui-steps-item-container > .rovna-ui-steps-item-tail::after {
  background-color: #3D825AFF;
  height: 2px;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-finish .rovna-ui-steps-item-icon {
  background-color: #3D825AFF;
}

.c1.rovna-ui-steps .rovna-ui-steps-item-finish .rovna-ui-steps-item-icon .rovna-ui-steps-icon {
  color: #FFFFFFFF;
}

<div
  className="c0"
>
  <div
    className="rovna-ui-steps rovna-ui-steps-vertical c1 css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-steps"
    style={{}}
  >
    <div
      className="rovna-ui-steps-item rovna-ui-steps-item-process rovna-ui-steps-item-active"
      style={{}}
    >
      <div
        className="rovna-ui-steps-item-container"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="rovna-ui-steps-item-tail"
        />
        <div
          className="rovna-ui-steps-item-icon"
        >
          <span
            className="rovna-ui-steps-icon"
          >
            1
          </span>
        </div>
        <div
          className="rovna-ui-steps-item-content"
        >
          <div
            className="rovna-ui-steps-item-title"
          >
            Заголовок 1
          </div>
          <div
            className="rovna-ui-steps-item-description"
          >
            Описание 1
          </div>
        </div>
      </div>
    </div>
    <div
      className="rovna-ui-steps-item rovna-ui-steps-item-wait"
      style={{}}
    >
      <div
        className="rovna-ui-steps-item-container"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="rovna-ui-steps-item-tail"
        />
        <div
          className="rovna-ui-steps-item-icon"
        >
          <span
            className="rovna-ui-steps-icon"
          >
            2
          </span>
        </div>
        <div
          className="rovna-ui-steps-item-content"
        >
          <div
            className="rovna-ui-steps-item-title"
          >
            Заголовок 2
          </div>
          <div
            className="rovna-ui-steps-item-description"
          >
            Описание 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="rovna-ui-steps-item rovna-ui-steps-item-wait"
      style={{}}
    >
      <div
        className="rovna-ui-steps-item-container"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="rovna-ui-steps-item-tail"
        />
        <div
          className="rovna-ui-steps-item-icon"
        >
          <span
            className="rovna-ui-steps-icon"
          >
            3
          </span>
        </div>
        <div
          className="rovna-ui-steps-item-content"
        >
          <div
            className="rovna-ui-steps-item-title"
          >
            Заголовок 3
          </div>
          <div
            className="rovna-ui-steps-item-description"
          >
            Описание 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
